docs: Reformat swagguer docs annotations
