# cmd/server/handler/reponses.go
@@ -6,13 +6,4 @@ type ErrorResponse struct {
 	Message   string   `json:"message"`
 	Path      string   `json:"path"`
 	Errors    []string `json:"errors,omitempty"`
-} // @name Error
-
-type PageResponse struct {
-	Page     int         `json:"page"`
-	Size     int         `json:"size"`
-	Total    int         `json:"total"`
-	Content  interface{} `json:"content"`
-	NextPage string      `json:"next_page"`
-	PrevPage string      `json:"prev_page"`
-}
+} // @name ErrorResponse
